--- a/crud/templates/html/base.html
+++ b/crud/templates/html/base.html
@@ -56,7 +56,7 @@
 
 
 
-     <!-- Required JavaScript Start -->
+     <!-- Required JavaScript Start
       <script src="{% static 'crud/js/jquery-1.12.4.min.js' %}"></script>
       <script src="{% static 'crud/js/popper.min.js' %}"></script>
       <script src="{% static 'crud/js/bootstrap.min.js' %}"></script>
@@ -66,7 +66,7 @@
       <script src="{% static 'crud/js/waypoints.min.js' %}"></script>
       <script src="{% static 'crud/js/jquery.counterup.min.js' %}"></script>
       <script src="{% static 'crud/js/custom.js' %}"></script>
-      <!-- Required JavaScript End -->
+       Required JavaScript End -->
 </body>
 </html>
 
